...
                    if firebaseManager.isShowLoan {
                        CreateRequestView().navigationTitle("").navigationBarHidden(true)
                            .tabItem {
                                Image(systemName: "dollarsign.square")
                                    .font(.system(size: 29))
                                    .foregroundColor(Color(hex: "BDBDBD"))
                                Text("Loan")
                            }.tag(1).statusBar(hidden: true)
                    }
                    CurrencyView(dataService: dataService).navigationTitle("").navigationBarHidden(true)
                        .tabItem {
                            if #available(iOS 15.0, *) {
                                Image(systemName: "digitalcrown.arrow.clockwise")
...
